# mmv-rust

./: Cargo.toml
src/: fs_utils.rs  input_validation.rs  lib.rs  match.rs
tests/: test.rs
