[package]
name = "mmv"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
regex = { version = "1.10.1" }
walkdir = { version = "2.4.0" }
copy_dir = "0.1.3"
panic-message = "0.3.0"

[lib]
name = "mmv2000"
path = "src/lib.rs"

[[bin]]
name = "mmv"
path = "src/lib.rs"
